--- a/ti-ina229/INA229.html
+++ b/ti-ina229/INA229.html
@@ -53,7 +53,7 @@
         <header class="mb-8 p-6 bg-gray-800 rounded-xl shadow-lg border border-gray-700">
             <div class="flex justify-between items-center">
                 <div>
-                    <h1 class="text-3xl font-bold text-white">TI-SSB INA229 Application</h1>
+                    <h1 class="text-3xl font-bold text-white">TI-SCB INA229 Application</h1>
                     <p class="text-gray-400 mt-1">A web-based UI to configure and monitor the INA229 via WebSerial and WebUSB.</p>
                 </div>
                 <div class="flex items-center">
